--- a/automl.ipynb
+++ b/automl.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "gather": {
      "logged": 1598423888013
@@ -27,7 +27,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "import pandas as pd\n",
+    "\n",
+    "from azureml.core import Workspace, Experiment"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,7 +50,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "competitive-data-science-predict-future-sales.zip: Skipping, found more recently modified local copy (use --force to force download)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.environ['KAGGLE_USERNAME'] = \"lubomrstraka\"\n",
+    "os.environ['KAGGLE_KEY'] = \"c7347462ef834e6645ce238c2f2fa561\"\n",
+    "! pip install kaggle --upgrade --quiet\n",
+    "! kaggle competitions download -c competitive-data-science-predict-future-sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['items.csv',\n",
+       " 'item_categories.csv',\n",
+       " 'sales_train.csv',\n",
+       " 'sample_submission.csv',\n",
+       " 'shops.csv',\n",
+       " 'test.csv']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_ref = zipfile.ZipFile('competitive-data-science-predict-future-sales.zip', 'r')\n",
+    "zip_ref.extractall()\n",
+    "zip_ref.close()\n",
+    "[f for f in os.listdir() if f[-3:] == 'csv']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2935849 entries, 0 to 2935848\n",
+      "Data columns (total 6 columns):\n",
+      "date              object\n",
+      "date_block_num    int64\n",
+      "shop_id           int64\n",
+      "item_id           int64\n",
+      "item_price        float64\n",
+      "item_cnt_day      float64\n",
+      "dtypes: float64(2), int64(3), object(1)\n",
+      "memory usage: 134.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('sales_train.csv')\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "gather": {
      "logged": 1598423890461
@@ -59,12 +141,23 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quick-starts-ws-151899\n",
+      "aml-quickstarts-151899\n",
+      "southcentralus\n",
+      "510b94ba-e453-4417-988b-fbdc37b55ca7\n"
+     ]
+    }
+   ],
    "source": [
     "ws = Workspace.from_config()\n",
-    "\n",
-    "# choose a name for experiment\n",
-    "experiment_name = 'your experiment name here'\n",
+    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep='\\n')\n",
+    "# Choose a name for experiment\n",
+    "experiment_name = 'Predict-Sales-AutoML'\n",
     "\n",
     "experiment=Experiment(ws, experiment_name)"
    ]
@@ -340,7 +433,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
+  },
+  "microsoft": {
+   "host": {
+    "AzureML": {
+     "notebookHasBeenCompleted": true
+    }
+   }
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
