--- a/Register_dataset.ipynb
+++ b/Register_dataset.ipynb
@@ -24,10 +24,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quick-starts-ws-152008\n",
-      "aml-quickstarts-152008\n",
+      "quick-starts-ws-152157\n",
+      "aml-quickstarts-152157\n",
       "southcentralus\n",
-      "9a7511b8-150f-4a58-8528-3e7d50216c31\n"
+      "610d6e37-4747-4a20-80eb-3aad70a55f43\n"
      ]
     }
    ],
@@ -43,30 +43,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading mercari-price-suggestion-challenge.zip to /mnt/batch/tasks/shared/LS_root/mounts/clusters/aml-compute-inst/code/Users/odl_user_152008\n",
-      " 97%|██████████████████████████████████████▉ | 393M/403M [00:06<00:00, 45.7MB/s]\n",
-      "100%|████████████████████████████████████████| 403M/403M [00:08<00:00, 47.4MB/s]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['.amlignore',\n",
+       " '.amlignore.amltmp',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'automl.ipynb',\n",
+       " 'house-prices-advanced-regression-techniques.zip',\n",
+       " 'Register_dataset.ipynb']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Import dependencies\n",
     "! pip install kaggle --upgrade --quiet\n",
-    "! pip install py7zr --quiet\n",
-    "\n",
-    "import os\n",
-    "import zipfile\n",
-    "import pandas as pd\n",
     "\n",
     "# Set the enviroment variables\n",
     "os.environ['KAGGLE_USERNAME'] = \"lubomrstraka\"\n",
     "os.environ['KAGGLE_KEY'] = \"c7347462ef834e6645ce238c2f2fa561\"\n",
     "\n",
     "# Download and unpack data\n",
-    "! kaggle competitions download -c mercari-price-suggestion-challenge"
+    "! kaggle competitions download -c house-prices-advanced-regression-techniques --quiet\n",
+    "os.listdir()"
    ]
   },
   {
@@ -74,32 +76,60 @@
    "execution_count": 4,
    "id": "63cd478b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.amlignore',\n",
+       " '.amlignore.amltmp',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'automl.ipynb',\n",
+       " 'data_description.txt',\n",
+       " 'house-prices-advanced-regression-techniques.zip',\n",
+       " 'Register_dataset.ipynb',\n",
+       " 'sample_submission.csv',\n",
+       " 'test.csv',\n",
+       " 'train.csv']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Extract data\n",
-    "with zipfile.ZipFile('mercari-price-suggestion-challenge.zip', 'r') as archive:\n",
-    "    archive.extract('train.tsv.7z')\n",
-    "! py7zr x train.tsv.7z\n",
-    "\n",
-    "# Read data to pd.DataFrame\n",
-    "train = pd.read_csv('train.tsv', sep='\\t')"
+    "with zipfile.ZipFile('house-prices-advanced-regression-techniques.zip', 'r') as archive:\n",
+    "    archive.extractall()\n",
+    "os.listdir()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "580f8f9d",
+   "id": "b684e4de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train.shape = (1460, 80)\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
-    "blob = ws.get_default_datastore()"
+    "# # Read Train & Test Data\n",
+    "train = pd.read_csv('train.csv', index_col='Id')\n",
+    "# test = pd.read_csv('test.csv', index_col='Id')\n",
+    "# print(f\"train.shape = {train.shape}, test.shape = {test.shape}\")\n",
+    "print(f\"train.shape = {train.shape}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e606ae95",
+   "id": "580f8f9d",
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +137,8 @@
       "text/plain": [
        "{\n",
        "  \"name\": \"workspaceblobstore\",\n",
-       "  \"container_name\": \"azureml-blobstore-7f871435-0898-439b-907a-38cd186094ef\",\n",
-       "  \"account_name\": \"mlstrg152008\",\n",
+       "  \"container_name\": \"azureml-blobstore-f5ac63c4-1e7e-44e9-b33b-1e668d2cf0f1\",\n",
+       "  \"account_name\": \"mlstrg152157\",\n",
        "  \"protocol\": \"https\",\n",
        "  \"endpoint\": \"core.windows.net\"\n",
        "}"
@@ -120,6 +150,8 @@
     }
    ],
    "source": [
+    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
+    "blob = ws.get_default_datastore()\n",
     "blob"
    ]
   },
@@ -143,7 +175,7 @@
       "Validating arguments.\n",
       "Arguments validated.\n",
       "Successfully obtained datastore reference and path.\n",
-      "Uploading file to managed-dataset/800d77b2-4a9f-47ff-bf0f-69188a904b72/\n",
+      "Uploading file to managed-dataset/1b094a17-f6cd-4390-b514-acaa32471c13/\n",
       "Successfully uploaded file to datastore.\n",
       "Creating and registering a new dataset.\n",
       "Successfully created and registered a new dataset.\n"
@@ -152,8 +184,8 @@
    ],
    "source": [
     "# Create the final dataset for experiments\n",
-    "train_ds = TabularDatasetFactory.register_pandas_dataframe(train, blob, name='mercari-train-data',\n",
-    "                                                          description='Mercari training data before preprocessing')"
+    "train_ds = TabularDatasetFactory.register_pandas_dataframe(train, blob, name='Ames-housing-dataset',\n",
+    "                                                          description='Ames housing training data before preprocessing.')"
    ]
   },
   {
