--- a/automl.ipynb
+++ b/automl.ipynb
@@ -818,22 +818,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Model Deployment\n",
+    "\n",
+    "Remember you have to deploy only one of the two models you trained.. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
+    "\n",
+    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "gather": {
      "logged": 1598431426111
@@ -855,7 +852,7 @@
        "'outputs/model.pkl'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,15 +864,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registering model Ames-Housing-AutoML-Model\n",
-      "Ames-Housing-AutoML-Model\tAmes-Housing-AutoML-Model:2\t2\n"
+     "ename": "NameError",
+     "evalue": "name 'best_run_metrics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c4c7ffc78c32>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./outputs/'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#best_run.download_file(best_run.get_file_names()[-6], output_file_path='./outputs/')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mws\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'outputs/model.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Ames-Housing-AutoML-Model'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbest_run_metrics\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'best_run_metrics' is not defined"
      ]
     }
    ],
@@ -890,48 +890,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Model(workspace=Workspace.create(name='quick-starts-ws-152157', subscription_id='610d6e37-4747-4a20-80eb-3aad70a55f43', resource_group='aml-quickstarts-152157'), name=Ames-Housing-AutoML-Model, id=Ames-Housing-AutoML-Model:2, version=2, tags={'mean_absolute_percentage_error': '9.189548385041606', 'r2_score': '0.8867183587869617', 'normalized_mean_absolute_error': '0.02152348548410304', 'explained_variance': '0.8868079393249927', 'normalized_root_mean_squared_error': '0.037018768677643726', 'spearman_correlation': '0.956256808492198', 'root_mean_squared_log_error': '0.13271070134427843', 'mean_absolute_error': '15499.061897102598', 'normalized_root_mean_squared_log_error': '0.04316913222805933', 'median_absolute_error': '9696.481985777713', 'root_mean_squared_error': '26657.21532477124', 'normalized_median_absolute_error': '0.013465465887762413', 'residuals': 'aml://artifactId/ExperimentRun/dcid.AutoML_0fc9eea6-09ad-40ac-9ec1-b571665bbd87_36/residuals', 'predicted_true': 'aml://artifactId/ExperimentRun/dcid.AutoML_0fc9eea6-09ad-40ac-9ec1-b571665bbd87_36/predicted_true'}, properties={})"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering model Ames-Housing-AutoML-Model\n",
+      "Ames-Housing-AutoML-Model\tAmes-Housing-AutoML-Model:2\t2\n"
+     ]
     }
    ],
    "source": [
-    "model"
+    "# Retrive previously saved the best model\n",
+    "from azureml.core import Model\n",
+    "os.makedirs('./outputs/', exist_ok=True)\n",
+    "model = Model.register(ws, model_path='outputs/model.pkl', model_name='Ames-Housing-AutoML-Model')\n",
+    "print(model.name, model.id, model.version, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azureml.core.webservice import AciWebservice\n",
+    "aciconfig = AciWebservice.deploy_configuration(cpu_cores=1,\n",
+    "                                              memory_gb=1,\n",
+    "                                              tags={\"data\" : \"Kaggle\", \"method\" : \"AutoML\"},\n",
+    "                                              description=\"Predict Ames Housing Prices\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>Ames-housing-AutoML</td><td>AutoML_0fc9eea6-09ad-40ac-9ec1-b571665bbd87_36</td><td>azureml.scriptrun</td><td>Completed</td><td><a href=\"https://ml.azure.com/runs/AutoML_0fc9eea6-09ad-40ac-9ec1-b571665bbd87_36?wsid=/subscriptions/610d6e37-4747-4a20-80eb-3aad70a55f43/resourcegroups/aml-quickstarts-152157/workspaces/quick-starts-ws-152157&amp;tid=660b3398-b80e-49d2-bc5b-ac1dc93b5254\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.run.Run?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
-      ],
       "text/plain": [
-       "Run(Experiment: Ames-housing-AutoML,\n",
-       "Id: AutoML_0fc9eea6-09ad-40ac-9ec1-b571665bbd87_36,\n",
-       "Type: azureml.scriptrun,\n",
-       "Status: Completed)"
+       "{\n",
+       "    \"databricks\": {\n",
+       "        \"eggLibraries\": [],\n",
+       "        \"jarLibraries\": [],\n",
+       "        \"mavenLibraries\": [],\n",
+       "        \"pypiLibraries\": [],\n",
+       "        \"rcranLibraries\": []\n",
+       "    },\n",
+       "    \"docker\": {\n",
+       "        \"arguments\": [],\n",
+       "        \"baseDockerfile\": null,\n",
+       "        \"baseImage\": \"mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04:20210531.v1\",\n",
+       "        \"baseImageRegistry\": {\n",
+       "            \"address\": null,\n",
+       "            \"password\": null,\n",
+       "            \"registryIdentity\": null,\n",
+       "            \"username\": null\n",
+       "        },\n",
+       "        \"enabled\": false,\n",
+       "        \"platform\": {\n",
+       "            \"architecture\": \"amd64\",\n",
+       "            \"os\": \"Linux\"\n",
+       "        },\n",
+       "        \"sharedVolumes\": true,\n",
+       "        \"shmSize\": null\n",
+       "    },\n",
+       "    \"environmentVariables\": {\n",
+       "        \"EXAMPLE_ENV_VAR\": \"EXAMPLE_VALUE\"\n",
+       "    },\n",
+       "    \"inferencingStackVersion\": null,\n",
+       "    \"name\": \"project-env\",\n",
+       "    \"python\": {\n",
+       "        \"baseCondaEnvironment\": null,\n",
+       "        \"condaDependencies\": {\n",
+       "            \"channels\": [\n",
+       "                \"anaconda\",\n",
+       "                \"conda-forge\"\n",
+       "            ],\n",
+       "            \"dependencies\": [\n",
+       "                \"python=3.6.2\",\n",
+       "                {\n",
+       "                    \"pip\": [\n",
+       "                        \"azureml-train-automl-runtime==1.32.0\",\n",
+       "                        \"inference-schema\",\n",
+       "                        \"azureml-interpret==1.32.0\",\n",
+       "                        \"azureml-defaults==1.32.0\"\n",
+       "                    ]\n",
+       "                },\n",
+       "                \"numpy>=1.16.0,<1.19.0\",\n",
+       "                \"pandas==0.25.1\",\n",
+       "                \"scikit-learn==0.22.1\",\n",
+       "                \"py-xgboost<=0.90\",\n",
+       "                \"fbprophet==0.5\",\n",
+       "                \"holidays==0.9.11\",\n",
+       "                \"psutil>=5.2.2,<6.0.0\"\n",
+       "            ],\n",
+       "            \"name\": \"azureml_c199a2d8511501c9bde5dfe3639e54c9\"\n",
+       "        },\n",
+       "        \"condaDependenciesFile\": null,\n",
+       "        \"interpreterPath\": \"python\",\n",
+       "        \"userManagedDependencies\": false\n",
+       "    },\n",
+       "    \"r\": null,\n",
+       "    \"spark\": {\n",
+       "        \"packages\": [],\n",
+       "        \"precachePackages\": true,\n",
+       "        \"repositories\": []\n",
+       "    },\n",
+       "    \"version\": \"1\"\n",
+       "}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_run"
+    "from azureml.core.environment import Environment\n",
+    "from azureml.core.conda_dependencies import CondaDependencies\n",
+    "\n",
+    "env = Environment(\"project-env\")\n",
+    "cd = CondaDependencies('conda_env_v_1_0_0.yml')\n",
+    "env.python.conda_dependencies = cd\n",
+    "# Register environment to re-use later\n",
+    "env.register(workspace=ws)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tips: You can try get_logs(): https://aka.ms/debugimage#dockerlog or local deployment: https://aka.ms/debugimage#debug-locally to debug if deployment takes longer than 10 minutes.\n",
+      "Running\n",
+      "2021-07-23 11:15:59+00:00 Creating Container Registry if not exists..\n",
+      "2021-07-23 11:16:10+00:00 Registering the environment..\n",
+      "2021-07-23 11:16:11+00:00 Building image."
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import uuid\n",
+    "from azureml.core.webservice import Webservice\n",
+    "from azureml.core.model import InferenceConfig\n",
+    "from azureml.core.environment import Environment\n",
+    "from azureml.core import Workspace\n",
+    "from azureml.core.model import Model\n",
+    "\n",
+    "ws = Workspace.from_config()\n",
+    "model = Model(ws, 'Ames-Housing-AutoML-Model')\n",
+    "\n",
+    "myenv = Environment.get(workspace=ws, name=\"project-env\", version=\"1\")\n",
+    "inference_config = InferenceConfig(entry_script=\"scoring_file_v_1_0_0.py\", environment=myenv)\n",
+    "\n",
+    "service_name = 'ames-housing-aml-' + str(uuid.uuid4())[:4]\n",
+    "service = Model.deploy(workspace=ws,\n",
+    "                      name=service_name,\n",
+    "                      models=[model],\n",
+    "                      inference_config=inference_config,\n",
+    "                      deployment_config=aciconfig)\n",
+    "\n",
+    "service.wait_for_deployment(show_output=True)"
    ]
   },
   {
@@ -939,38 +1066,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# https://docs.microsoft.com/en-us/azure/machine-learning/how-to-deploy-and-where?tabs=azcli#script"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Deployment\n",
-    "\n",
-    "Remember you have to deploy only one of the two models you trained.. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
-    "\n",
-    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598431435189
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
