Vytvořeno pomocí služby Colaboratory

--- a/collab/Ames-Housing-EDA.ipynb
+++ b/collab/Ames-Housing-EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "20210719-Introduction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNwFIxiIkYjQD1alfRYNmBM",
+      "authorship_tag": "ABX9TyMdax9zjb/XgdUR3Dkw/Pbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2949,11 +2949,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mg3UGu923P6U",
-        "outputId": "cb700940-e77a-42a6-9902-b9be7b85423e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Mg3UGu923P6U",
+        "outputId": "cb700940-e77a-42a6-9902-b9be7b85423e"
       },
       "source": [
         "X = train.copy()\n",
@@ -2992,11 +2992,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vb7Fl_ef3PyE",
-        "outputId": "38d53570-acc2-4340-9311-e0bea1db1936",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vb7Fl_ef3PyE",
+        "outputId": "38d53570-acc2-4340-9311-e0bea1db1936"
       },
       "source": [
         "# Calculate Mutual Information Regression\n",
@@ -3037,11 +3037,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cgQ5jJ_83P2e",
-        "outputId": "96374564-a6a2-4699-c183-9deecd3af197",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cgQ5jJ_83P2e",
+        "outputId": "96374564-a6a2-4699-c183-9deecd3af197"
       },
       "source": [
         "# Compute correlation\n",
@@ -3078,11 +3078,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "543IwoihErF1",
-        "outputId": "b8acc870-89c8-495a-83a2-4c3445d8c077",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "543IwoihErF1",
+        "outputId": "b8acc870-89c8-495a-83a2-4c3445d8c077"
       },
       "source": [
         "# Select features by Boruta\n",
@@ -3108,11 +3108,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J2vgXW8Z3Pvc",
-        "outputId": "886825ac-cc7b-453f-9f6d-7cb2bcc59511",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J2vgXW8Z3Pvc",
+        "outputId": "886825ac-cc7b-453f-9f6d-7cb2bcc59511"
       },
       "source": [
         "clf = RandomForestClassifier(n_jobs=-1, class_weight='balanced', max_depth=5)\n",
@@ -3161,11 +3161,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cVeNHyHHC7vN",
-        "outputId": "2b4d87e2-15e6-4b16-b1d5-e323c4fed593",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cVeNHyHHC7vN",
+        "outputId": "2b4d87e2-15e6-4b16-b1d5-e323c4fed593"
       },
       "source": [
         "# Observation: Unforunately no feature recommended by this algorithm\n",
@@ -3190,11 +3190,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iwrDBI80CrPL",
-        "outputId": "ece80680-b881-427a-8aab-76e3ba5e6018",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iwrDBI80CrPL",
+        "outputId": "ece80680-b881-427a-8aab-76e3ba5e6018"
       },
       "source": [
         "# Notice: no feature with rank 1\n",
@@ -3223,11 +3223,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gL6QJPqfDT1U",
-        "outputId": "73a5ed0c-4ee7-4447-8821-7644d810d14c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gL6QJPqfDT1U",
+        "outputId": "73a5ed0c-4ee7-4447-8821-7644d810d14c"
       },
       "source": [
         "# Use features accordning to rank\n",
@@ -3265,12 +3265,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nw31sXsdHFgU",
-        "outputId": "dd55f027-2467-42d8-e36d-a1aa6044ef5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "nw31sXsdHFgU",
+        "outputId": "dd55f027-2467-42d8-e36d-a1aa6044ef5c"
       },
       "source": [
         "# Report top features for next step\n",
@@ -3451,12 +3451,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WF-6BbKRIYCh",
-        "outputId": "fe8a4aae-d80b-4740-9273-ef234712edc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 154
-        }
+        },
+        "id": "WF-6BbKRIYCh",
+        "outputId": "fe8a4aae-d80b-4740-9273-ef234712edc0"
       },
       "source": [
         "# Compare feature selection with a baseline score\n",
@@ -3499,12 +3499,152 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D-cTEDTTKGtn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D-cTEDTTKGtn",
+        "outputId": "fe9cbd20-ac77-4e0a-e7a8-bbac09fd56af"
+      },
+      "source": [
+        "mi_scores[mi_scores==0].index"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['PoolQC', 'MoSold', 'YrSold'], dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qtn-jwksQIUp",
+        "outputId": "7b324fb0-8848-468c-83e2-31cad40bb2e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "score_RMSLE(X.drop(columns=mi_scores[mi_scores==0].index), y)\n",
+        "\"\"\"Dropping uninformative features improve the score\"\"\""
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[14:41:15] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:41:15] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:41:15] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:41:16] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:41:16] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1299626955997075"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFk8bFmmQ0bO",
+        "outputId": "7c0bcf85-88ce-4fdc-fda1-b126d78ff7fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "mi_scores[-5:]"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Utilities    1.887379e-15\n",
+              "PoolArea     2.220446e-16\n",
+              "PoolQC       0.000000e+00\n",
+              "MoSold       0.000000e+00\n",
+              "YrSold       0.000000e+00\n",
+              "Name: MIScores, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xwQmtzo9STam",
+        "outputId": "d25fdbd4-2abb-48ad-beb3-bb73bfdd0259",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "score_RMSLE(X.drop(columns=mi_scores[-5:].index), y)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[14:48:23] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:48:23] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:48:24] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:48:24] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:48:24] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.13019570733045785"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZTYRA2xBSc_f"
       },
       "source": [
         ""
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     }
   ]
