--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -11,14 +11,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "gather": {
      "logged": 1598531914256
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import ames # The module for loading external data - Ames Housing dataset\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import ast\n",
+    "import pickle\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "from azureml.core import Workspace, Dataset, Experiment, Model\n",
+    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
+    "from azureml.widgets import RunDetails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quick-starts-ws-153414\n",
+      "aml-quickstarts-153414\n",
+      "southcentralus\n",
+      "3e42d11f-d64d-4173-af9b-12ecaa1030b3\n"
+     ]
+    }
+   ],
+   "source": [
+    "ws = Workspace.from_config()\n",
+    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing cluster, use it.\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "\n",
+      "Minimum number of nodes requested have been provisioned\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create compute cluster\n",
+    "# Choose a name for your CPU cluster\n",
+    "cpu_cluster_name = \"cpu-cluster\"\n",
+    "\n",
+    "# Verify that cluster does not exist already\n",
+    "try:\n",
+    "    cpu_cluster = ComputeTarget(workspace=ws, name=cpu_cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                           max_nodes=4)\n",
+    "    cpu_cluster = ComputeTarget.create(ws, cpu_cluster_name, compute_config)\n",
+    "\n",
+    "cpu_cluster.wait_for_completion(show_output=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31,27 +98,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598531917374
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
-    "experiment_name = 'your experiment name here'\n",
+    "# Try to load the dataset from the workspace. Otherwise, load if from Kaggle\n",
+    "found = False\n",
+    "ds_key = 'Ames-housing-dataset'\n",
+    "ds_desc = 'Ames Housing training data.'\n",
     "\n",
-    "experiment=Experiment(ws, experiment_name)"
+    "if ds_key in ws.datasets.keys():\n",
+    "    found = True\n",
+    "    dataset = ws.datasets[ds_key]\n",
+    "    print(f'Found registered {ds_key}, use it.')\n",
+    "    \n",
+    "if not found:\n",
+    "    train, test = ames.load_data_clean()\n",
+    "    print(f\"train.shape = {train.shape}, test.shape = {test.shape}\")\n",
+    "    # Register the train dataset\n",
+    "    blob = ws.get_default_datastore()\n",
+    "    dataset = TabularDatasetFactory.register_pandas_dataframe(train, blob, name=ds_key, description=ds_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting train_scikit.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile train_scikit.py\n",
+    "\"\"\"Train, evaluate and log metrics for selected ML algorithm \n",
+    "in the Azure workspace context.\"\"\"\n",
+    "\n",
+    "import argparse\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "from azureml.core.run import Run\n",
+    "from azureml.core import Workspace\n",
+    "\n",
+    "ws = Workspace.from_config()\n",
+    "ds_key = 'Ames-housing-dataset'\n",
+    "dataset = ws.datasets[ds_key]\n",
+    "\n",
+    "train = dataset.to_pandas_dataframe()\n",
+    "print(train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1460, 80)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python train_scikit.py"
    ]
   },
   {
@@ -75,6 +193,31 @@
     "## Hyperdrive Configuration\n",
     "\n",
     "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "gather": {
+     "logged": 1598531917374
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "experiment_name = 'your experiment name here'\n",
+    "\n",
+    "experiment=Experiment(ws, experiment_name)"
    ]
   },
   {
@@ -303,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
