Vytvořeno pomocí služby Colaboratory

--- a/colab/Ames_Housing_XGB_Experiment.ipynb
+++ b/colab/Ames_Housing_XGB_Experiment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ames-Housing-XGB-Experiment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbpHFsHCwOLr4knfvbtX0l",
+      "authorship_tag": "ABX9TyOicGk7F2/opmjwPB4fQRC1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q5dLWUc7baBA",
-        "outputId": "6abb1020-3501-4676-c56b-c42e1fd702e2"
+        "outputId": "786b8b71-69fc-4287-b4ca-af5421d8a5e3"
       },
       "source": [
         "%%writefile ames.py\n",
@@ -213,7 +213,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Overwriting ames.py\n"
+            "Writing ames.py\n"
           ],
           "name": "stdout"
         }
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "46E7DTJqbjzx",
-        "outputId": "93142ad2-9981-440a-8a17-1e0a8e60dc59"
+        "outputId": "8f9f21d5-2ac7-4bd7-a075-d4e54584160b"
       },
       "source": [
         "import ames\n",
@@ -251,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FnfOSoilcd1h",
-        "outputId": "a8425f4c-5a0e-4962-c19f-9d5c439c9416"
+        "outputId": "c0faa8a7-c652-4e17-e0c8-bfbb3eca2f86"
       },
       "source": [
         "X_train, X_test = train_test_split(ames.label_encode(train))\n",
@@ -282,7 +282,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xCxCuyHZc5eQ",
-        "outputId": "58723b19-6349-4a6e-eb82-16ce5b5c04b4"
+        "outputId": "abdcef08-4701-439f-8ce6-58ee0df9c468"
       },
       "source": [
         "model = XGBRegressor(learning_rate=0.1, gamma=2, max_depth=3, objective='reg:squarederror')\n",
@@ -317,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "94qXcHxhdr2X",
-        "outputId": "b63086ba-caba-41c7-9af4-16258b905a82"
+        "outputId": "9b2bbe8c-c68c-4de0-8118-00a93823769a"
       },
       "source": [
         "y_pred = model.predict(X_test)\n",
@@ -329,7 +329,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8912964834759828"
+              "0.8997566984816935"
             ]
           },
           "metadata": {
@@ -345,9 +345,95 @@
         "id": "Vz0Z4s8Lf2tN"
       },
       "source": [
+        "import json"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DEaK-YYcoQH-"
+      },
+      "source": [
+        "data = {'data': X_test.head(10).to_dict(orient='list')}"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "56-cYMPOozMn"
+      },
+      "source": [
+        "with open('data.json', 'w') as file:\n",
+        "  json.dump(data, file)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4wyhxo5npxZX"
+      },
+      "source": [
+        "with open('data.json', 'r') as file:\n",
+        "  data_json = json.load(file)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WoFuZOoIqwHc"
+      },
+      "source": [
+        "data_sample = pd.DataFrame.from_dict(data_json['data'])"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m8bdvLx8q9DG",
+        "outputId": "c84cbf20-593e-4ebd-8fc4-1ee152b72b2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.predict(data_sample)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([176260.58, 126176.65, 177646.4 , 135595.06, 164705.7 , 144124.33,\n",
+              "       155674.1 , 233183.14, 247349.3 , 188598.83], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5B-5uA4jri6m"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
